# go-sdk

./: .gitignore  BUILD.bazel  README.md  go.mod  go.sum
.github/workflows/: publish.yml
examples/openai_agent/: main.go
examples/robot_telemetry/: main.go
pkg/: client.go  client_test.go  method_id.go  moqt.go
pkg/agent/: agent.go  agent_test.go
pkg/data/: data.go
pkg/games/: games.go
pkg/robotics/: robotics.go
pkg/streams/: now.go  streams.go
pkg/voice/: voice.go
